Fix images - Update image urls - Fix gaps and padding

--- a/src/components/CartItem.module.css
+++ b/src/components/CartItem.module.css
@@ -61,5 +61,5 @@
 
 .responsive-image {
   max-width: 100%;
-  height: auto;
+  height: 22rem;
 }
