--- a/src/components/ComingSoon.module.css
+++ b/src/components/ComingSoon.module.css
@@ -14,7 +14,7 @@
 .container {
   width: 450px;
   height: 650px;
-  background-image: url('https://source.unsplash.com/D1wiHCovGJ0/450x650');
+  background-image: url('https://res.cloudinary.com/dzfhooefh/image/upload/v1759645000/shopping-cart/D1wiHCovGJ0.webp');
   background-size: cover;
   background-repeat: no-repeat;
 }
